Added Sprint Race Result Feature

--- a/results.html
+++ b/results.html
@@ -32,8 +32,10 @@
   </form>
   <br>
   <div class="container">
-  <button type="button" onclick="selectqualifying()" class="btn btn-secondary" id = "bt1">Qualifying</button>
-  <button type="button" onclick="selectrace()" class="btn btn-secondary" id = "bt2">Race</button>
+    
+    <button type="button" onclick="selectqualifying()" class="btn btn-secondary" id = "bt1">Qualifying</button>
+    <button type="button" onclick="selectrace()" class="btn btn-secondary" id = "bt2">Race</button>
+    <button type="button" onclick="sprintqualifyingget()" class="btn btn-secondary" id = "bt4">Sprint</button>
   </div>
   <h3>Standings</h3>
   <table id="table1">
